2006-09-15 Xan Lopez <xan.lopez@nokia.com> 

	* gtk/gtkhbbox.c: (gtk_hbutton_box_new),
	(gtk_hbutton_box_size_request), (gtk_hbutton_box_size_allocate),
	(osso_gtk_hbutton_box_find_button_detail): Fix coding style.
	* gtk/gtktreeview.c: (gtk_tree_view_bin_expose): Remove debug
	leftovers.

2006-09-15  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* gtk/gtkselection.c (_gtk_selection_request): Free mult_atoms also
	when successful. NB#22354 

2006-09-15  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcombobox.c (gtk_combo_box_list_key_press): Close the popup
	when F4 (Hildon menu key) is pressed. NB#40033

2006-09-14  Xan Lopez  <xan.lopez@nokia.com>

	* gtk/gtknotebook.c (gtk_notebook_pages_allocate): Fix compiler warnings.
	
2006-09-14  Xan Lopez  <xan.lopez@nokia.com>

	Taken from GNOME Bugzilla #355732. NB#40316.

    2006-09-13  Richard Hult  <richard@imendio.com>

	* gtk/gtkcombobox.c: (gtk_combo_box_finalize): Unref the treeview
	used in appears-as-list mode, fixes leak.
	
2006-09-14  Xan Lopez  <xan.lopez@nokia.com>

	* gtk/gtknotebook.c: (gtk_notebook_pages_allocate): Calculate proper
	width for overflowing notebook tabs,  NB#22230.

2006-09-14  Xan Lopez  <xan.lopez@nokia.com>

	Apply patch for bug NB#3490. Taken from GNOME CVS.

    2005-06-15  Kristian Rietveld  <kris@gtk.org>

        Patch for #163214 (reported by Tommi Komulainen) and fixes some
        other scrolling/validation related bugs along the why.

	* gtk/gtktreeview.c (gtk_tree_view_size_request): run
        do_validate_rows once and don't queue a size request there,
	(gtk_tree_view_size_allocate): don't update vadj value without
        reason, sync top_row/dy after the window sizes and adjustments
        are in sync again,
	(validate_visible_area): always update dy when scrolling,
        manually set top_row here after changing the vadj (don't depend
        on _adjustment_changed and top_row/dy sync to do this), since we